--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:X3YmMQI8yOKKX551bmnkp0n2dJ651E5tvwtO554VaLU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
+
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -16,9 +17,11 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=images
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
